Update to Minecraft 1.20.6
Closes #87.